[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/game_over/game_over.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/button_disabled.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/button_hovered.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/button_basic.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Antonio-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sound/select.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 86
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "fadein"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 130.0
margin_right = 117.0
margin_bottom = 190.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -21.0
margin_right = 84.0
margin_bottom = 21.0
theme = SubResource( 2 )
text = "RETRY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 234.0
margin_right = 117.0
margin_bottom = 294.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -21.0
margin_right = 84.0
margin_bottom = 21.0
theme = SubResource( 2 )
text = "MENU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.0
margin_top = 24.0
margin_right = 162.0
margin_bottom = 136.0
theme = SubResource( 5 )
text = "game over"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layerScore" type="Control" parent="Scores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -188.0
margin_right = -60.0
margin_bottom = -148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scores/layerScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -7.0
margin_right = 236.0
margin_bottom = 25.0
theme = SubResource( 7 )
text = "Layers Drilled "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyScore" type="Control" parent="Scores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -148.0
margin_right = -60.0
margin_bottom = -108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scores/moneyScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -7.0
margin_right = 236.0
margin_bottom = 25.0
theme = SubResource( 7 )
text = "Money Earned"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageScore" type="Control" parent="Scores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -108.0
margin_right = -60.0
margin_bottom = -68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scores/damageScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -7.0
margin_right = 236.0
margin_bottom = 25.0
theme = SubResource( 7 )
text = "Money Earned"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="killScore" type="Control" parent="Scores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -68.0
margin_right = -60.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scores/killScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -7.0
margin_right = 236.0
margin_bottom = 25.0
theme = SubResource( 7 )
text = "Money Earned"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Control" parent="Scores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -12.0
margin_right = -60.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scores/Total"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -7.0
margin_right = 236.0
margin_bottom = 25.0
theme = SubResource( 9 )
text = "TOTAL :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Scores/Total"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 41.0
margin_right = 237.0
margin_bottom = 73.0
theme = SubResource( 7 )
text = "999999999 pts"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scores"]

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.75 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fadein = SubResource( 3 )

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
